force-app/main/default/objects/Potencial__c/Potencial__c.object-meta.xml
<CustomObject>
    <label>Potencial</label>
    <nameField>
        <displayFormat>P{0000000}</displayFormat>
        <label>Potencial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potencial</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>