force-app/main/default/objects/Potencial__c/fields/Calculado__c.field-meta.xml
<CustomField>
    <fullName>Calculado__c</fullName>
    <label>Calculado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>