force-app/main/default/objects/Potencial__c/fields/Manual__c.field-meta.xml
<CustomField>
    <fullName>Manual__c</fullName>
    <label>Manual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>